去掉一个编译警告